--- a/build.properties
+++ b/build.properties
@@ -2,4 +2,7 @@ source.. = src/
 output.. = bin/
 bin.includes = plugin.xml,\
                META-INF/,\
-               .
+               .,\
+               lib/commons-codec-1.9.jar,\
+               lib/gson-2.2.4.jar,\
+               lib/retrofit-1.5.0.jar
