--- a/.classpath
+++ b/.classpath
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="lib/commons-io-2.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-lang3-3.3.1.jar" sourcepath="D:/Development/JAVA/commons-lang3-3.3.1-src.zip"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-codec-1.9.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/gson-2.2.4.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/retrofit-1.5.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/retrofit-1.5.0.jar" sourcepath="D:/Development/JAVA/retrofit/retrofit-1.5.0-sources.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
