--- a/build.properties
+++ b/build.properties
@@ -7,4 +7,5 @@ bin.includes = plugin.xml,\
                lib/gson-2.2.4.jar,\
                lib/retrofit-1.5.0.jar,\
                lib/commons-lang3-3.3.1.jar,\
-               lib/commons-io-2.4.jar
+               lib/commons-io-2.4.jar,\
+               icons/
